# open-alpha-pool

./: .gitignore  pyproject.toml  requirements-macos.md  requirements.txt
analysis/: paper_alignment.md
chain_of_alpha_nasdaq/: agent.py  alpha_db.py  alpha_pool.py  backtest.py  cli.py  config.py  data_handler.py  factor_generation.py  factor_optimization.py  integration_model.py  migrate_duckdb_to_sqlite.py  ml_agent.py  persistence.py  portfolio.py  run_live_agent.py  sqlite_store.py  utils.py
chain_of_alpha_nasdaq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chain_of_alpha_nasdaq/agents/: live_agent.py  run_nasdaq_scan.py
chain_of_alpha_nasdaq/analytics/: __init__.py  features.py  labels.py  metrics.py  model.py  performance_tracker.py
chain_of_alpha_nasdaq/broker/: paper_broker.py
chain_of_alpha_nasdaq/utils/: html_reporter.py  ticker_fetcher.py
data/: nasdaq_tickers.parquet
data/cache/ohlcv/: batch_AACB_ADAMG_2025-07-16_2025-10-14.parquet  batch_AACB_ADAMG_2025-09-13_2025-10-13.parquet  batch_AACB_ADAMG_2025-09-14_2025-10-14.parquet  batch_AACB_APLT_2025-07-15_2025-10-13.parquet  batch_AACB_APLT_2025-09-13_2025-10-13.parquet  batch_APM_BLDP_2025-07-15_2025-10-13.parquet  batch_APM_BLDP_2025-09-13_2025-10-13.parquet  batch_BLFS_CHAR_2025-07-15_2025-10-13.parquet  batch_BLFS_CHAR_2025-09-13_2025-10-13.parquet  batch_CHCI_DAIC_2025-07-15_2025-10-13.parquet  batch_CHCI_DAIC_2025-09-13_2025-10-13.parquet  completed_batches.txt  (+26 more)
notebooks/: demo_backtest.ipynb
tests/: test_data_handler.py  test_factor_optimization.py
(+2 files in other folders)
